force-app/main/default/objects/Portfolio__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Portfolio</relationshipLabel>
    <relationshipName>Portfolio</relationshipName>
    <type>Lookup</type>
</CustomField>