force-app/main/default/objects/Portfolio__c/fields/Total_Cost_Basis__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Basis__c</fullName>
    <label>Total Cost Basis</label>
    <summarizedField>Portfolio_Position__c.Total_Cost_Basis__c</summarizedField>
    <summaryForeignKey>Portfolio_Position__c.Portfolio__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>