force-app/main/default/objects/Portfolio__c/fields/Total_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Gain_Loss__c</fullName>
    <formula>Total_Value__c  -  Total_Cost_Basis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gain Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>