force-app/main/default/objects/Portfolio__c/fields/Total_Gain_Loss_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Gain_Loss_Percent__c</fullName>
    <formula>IF( Total_Cost_Basis__c &gt; 0,(( Total_Value__c -  Total_Cost_Basis__c )/ Total_Cost_Basis__c ) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gain Loss Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>